[유치수] [NOBTS] spanaligner2에서 root spanid를 찾는 로직 추가.
git-svn-id: http://svn.bds.nhncorp.com/pe/hippo-web/trunk@1129 84d0f5b1-2673-498c-a247-62c4ff18d310